# OmniMedia

./: .gitignore  README.md  package-lock.json  package.json  setup-ffmpeg.bat  vite.config.ts
scripts/: build-ffmpeg-wasapi.ps1  prepare-ffmpeg.mjs  tauri-env.mjs
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/ffmpeg/: NOTICE.txt
src-tauri/src/: error.rs  ffmpeg.rs  input_hook.rs  lib.rs  main.rs  state.rs  win_helpers.rs
src-tauri/src/commands/: editor.rs  input.rs  mod.rs  overlay.rs  recorder.rs  screenshot.rs  system.rs  webcam.rs
src-tauri/src/editor/: mod.rs
src-tauri/src/image/: mod.rs
src-tauri/src/recorder/: mod.rs  win.rs
src/components/: Sidebar.tsx
src/features/animation/: AnimationPage.tsx
src/features/editor/: EditorPage.tsx
src/features/image/: ImagePage.tsx
src/features/overlay/: OverlayCanvas.tsx  OverlayToolbar.tsx  keymap.ts
src/features/recorder/: RecorderPage.tsx
src/features/webcam/: WebcamOverlay.tsx
src/lib/: bridge.ts  cn.ts  types.ts
